Fixes overlays on the DM modals for images.
In some cases the overlay would appear behind the modals.

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -2051,3 +2051,7 @@ tr .panel {
 .modal .preview-modal-image {
   width: 100%;
 }
+
+.overlay {
+  transform: translateZ(900px);
+}
